Added precision + recall evaluation + graph for datasets and tidied up.

--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -686,18 +686,26 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from tools.knn import KNNClassifier\n",
+    "from tools.knn_utils import prepare_data, calculate_feature_weights, find_best_params, plot_precision_recall_curve, train_and_evaluate_final_model\n",
     "from tools.distance import EuclideanDistance, ManhattanDistance, MahalanobisDistance\n",
     "from tools.voting import InverseDistanceWeightedVote, MajorityClassVote, ShepardsWorkVote\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.feature_selection import mutual_info_classif\n",
-    "from sklearn_relief import ReliefF\n",
+    "from tools.knn import KNNClassifier\n",
+    "import numpy as np\n",
     "\n",
     "k_values = [1, 3, 5, 7]\n",
     "\n",
     "# Covariance matrix for Mahalanobis Distance\n",
     "covariance_matrix = np.cov(train_dfs[0].drop(columns=['class']).to_numpy(), rowvar=False)\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = prepare_data(train_dfs, test_dfs)\n",
+    "\n",
+    "normalized_info_gain_weights, normalized_relief_weights = calculate_feature_weights(X_train, y_train)\n",
+    "\n",
+    "weights_list = [\n",
+    "    None,  # Equal weight\n",
+    "    normalized_info_gain_weights,  # Information Gain (mutual information)\n",
+    "    normalized_relief_weights  # ReliefF\n",
+    "]\n",
     "\n",
     "distance_functions = [\n",
     "    ManhattanDistance(),  \n",
@@ -711,67 +719,25 @@
     "    ShepardsWorkVote()\n",
     "]\n",
     "\n",
-    "X_train = train_dfs[0].drop(columns=['class']).to_numpy()  # Drop the class column (target variable)\n",
-    "y_train = train_dfs[0]['class'].to_numpy()  # The class column is the target variable\n",
-    "\n",
-    "X_test = test_dfs[0].drop(columns=['class']).to_numpy()  # Same for test set\n",
-    "y_test = test_dfs[0]['class'].to_numpy()  # The class column in the test set\n",
-    "\n",
-    "# Calculate Information Gain (mutual information) for each feature\n",
-    "info_gain_weights = mutual_info_classif(X_train, y_train)\n",
-    "normalized_info_gain_weights = info_gain_weights / np.sum(info_gain_weights)  # Normalize to sum to 1\n",
-    "\n",
-    "# Calculate feature importance using ReliefF\n",
-    "relief = ReliefF()\n",
-    "relief.fit(X_train, y_train)\n",
-    "\n",
-    "relief_weights = relief.w_\n",
-    "normalized_relief_weights = relief_weights / np.sum(relief_weights)  # Normalize to sum to 1\n",
-    "\n",
-    "weights_list = [\n",
-    "    None,  # Equal weight\n",
-    "    normalized_info_gain_weights,  # Information Gain (mutual information)\n",
-    "    normalized_relief_weights  # ReliefF\n",
-    "]\n",
-    "\n",
     "# Track best score and corresponding params that achieved that score\n",
-    "best_score = 0\n",
-    "best_params = {}\n",
-    "\n",
-    "# Loop through combinations and test each combination\n",
-    "for k in k_values:\n",
-    "    for distance_func in distance_functions:\n",
-    "        for voting_func in voting_schemes:\n",
-    "            for weights in weights_list:\n",
-    "                print(f\"Testing combination: k={k}, distance_func={distance_func.__class__.__name__}, voting_func={voting_func.__class__.__name__}, weights={'Equal' if weights is None else 'Custom'}\")\n",
-    "\n",
-    "                knn = KNNClassifier(k = k,\n",
-    "                                    distance_func = distance_func,\n",
-    "                                    voting_func = voting_func,\n",
-    "                                    weights = weights\n",
-    "                                    )\n",
-    "\n",
-    "                scores = cross_val_score(knn,\n",
-    "                                         X_train,\n",
-    "                                         y_train, \n",
-    "                                         cv=5,\n",
-    "                                         scoring='accuracy'\n",
-    "                                         )\n",
-    "                \n",
-    "                avg_score = np.mean(scores)\n",
-    "\n",
-    "                if avg_score > best_score:\n",
-    "                    best_score = avg_score\n",
-    "                    best_params = {\n",
-    "                        'k': k,\n",
-    "                        'distance_func': distance_func.__class__.__name__,\n",
-    "                        'voting_func': voting_func.__class__.__name__,\n",
-    "                        'weights': 'Equal' if weights is None else 'Custom'\n",
-    "                    }\n",
+    "best_score, best_params = find_best_params(X_train, y_train, k_values, distance_functions, voting_schemes, weights_list)\n",
     "\n",
     "# Print the best combination of parameters\n",
     "print(f\"Best Score: {best_score}\")\n",
-    "print(f\"Best Params: {best_params}\")"
+    "print(f\"Best Params: {best_params}\")\n",
+    "\n",
+    "knn_final = KNNClassifier(k=best_params['k'],\n",
+    "                          distance_func=distance_functions[0] if best_params['distance_func'] == 'ManhattanDistance' else \n",
+    "                          distance_functions[1] if best_params['distance_func'] == 'EuclideanDistance' else\n",
+    "                          distance_functions[2],\n",
+    "                          voting_func=voting_schemes[0] if best_params['voting_func'] == 'MajorityClassVote' else \n",
+    "                          voting_schemes[1] if best_params['voting_func'] == 'InverseDistanceWeightedVote' else\n",
+    "                          voting_schemes[2],\n",
+    "                          weights=weights_list[0] if best_params['weights'] == 'Equal' else weights_list[1] if best_params['weights'] == 'Custom' else weights_list[2])\n",
+    "\n",
+    "plot_precision_recall_curve(knn_final, X_train, y_train)\n",
+    "\n",
+    "train_and_evaluate_final_model(best_params, distance_functions, voting_schemes, weights_list, X_train, y_train, X_test, y_test)"
    ]
   }
  ],
