make all imports and dir structure consistent for teammembers' work

--- a/work2/notebooks/0.1-CarlosJimenez-synthetic.ipynb
+++ b/work2/notebooks/0.1-CarlosJimenez-synthetic.ipynb
@@ -11,13 +11,13 @@
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
     "\n",
-    "from tools.distance import ManhattanDistance, EuclideanDistance\n",
-    "from tools.voting import (\n",
+    "from tools.CarlosJimenez.distance import ManhattanDistance, EuclideanDistance\n",
+    "from tools.CarlosJimenez.voting import (\n",
     "    MajorityClassVote,\n",
     "    InverseDistanceWeightedVote,\n",
     "    ShepardsWorkVote,\n",
     ")\n",
-    "from tools.knn import KNNClassifier"
+    "from tools.CarlosJimenez.knn import KNNClassifier"
    ]
   },
   {
