fix numbering and references for report

--- a/work2/reports/03-methods/03.1-methods-knn.tex
+++ b/work2/reports/03-methods/03.1-methods-knn.tex
@@ -1,12 +1,20 @@
-\subsection{k Neirest Neighbors (kNN)}
-\label{subsec:knn}
+\subsection{k-Nearest Neighbors (kNN)}
+\label{subsec:methods-knn}
 
-This section describes the methodology used in the study. It should include details about data collection, experimental design, and analytical techniques.
+This section describes the k-Nearest Neighbors (kNN) algorithm and its implementation in our study.
 
-% TODO: Describe the overall research design
-% TODO: Explain data collection methods and sources
-% TODO: Detail any experimental procedures
-% TODO: Describe data analysis techniques and tools used
-% TODO: Address any ethical considerations if applicable
+% TODO: Provide a brief overview of the kNN algorithm
+% TODO: Explain the choice of k value and any cross-validation used
+% TODO: Describe the distance metric used (e.g., Euclidean, Manhattan)
+% TODO: Discuss any feature scaling or normalization applied specifically for kNN
+
+\subsubsection{Algorithm Overview}
+% TODO: Explain how kNN works and its advantages/disadvantages
+
+\subsubsection{Implementation Details}
+% TODO: Describe the specific implementation, including any libraries or tools used
+
+\subsubsection{Parameter Tuning}
+% TODO: Explain how parameters were chosen and optimized
 
 % Add more content here as needed
