--- a/work2/reports/04-results-and-analysis/04.2-discussion.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion.tex
@@ -1,4 +1,4 @@
-\section{Discussion}
+\subsection{Discussion}
 \label{sec:discussion}
 
 In this section, interpret the results, discuss their implications, and relate them back to the research question or hypothesis. Address any limitations of the study and suggest areas for future research.
@@ -9,5 +9,9 @@ In this section, interpret the results, discuss their implications, and relate t
 % TODO: Address any unexpected findings
 % TODO: Acknowledge limitations of the study
 % TODO: Suggest directions for future research
+
+\input{04-results-and-analysis/04.2.1-discussion-knn}
+\input{04-results-and-analysis/04.2.2-discussion-reduction}
+\input{04-results-and-analysis/04.2.3-discussion-svm}
 
 % Add more content here as needed
