--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -1,13 +1,20 @@
-\subsection{kNN Analysis} % think of a better name
+\subsection{k-Nearest Neighbors (kNN) Analysis}
 \label{subsec:discussion-knn}
 
-In this section, interpret the results, discuss their implications, and relate them back to the research question or hypothesis. Address any limitations of the study and suggest areas for future research.
+This section interprets the results of the kNN algorithm, discussing its performance and implications.
 
-% TODO: Interpret the results in the context of the research question/hypothesis
-% TODO: Compare findings with existing literature
-% TODO: Discuss the implications of the results
-% TODO: Address any unexpected findings
-% TODO: Acknowledge limitations of the study
-% TODO: Suggest directions for future research
+% TODO: Summarize the performance metrics of kNN (e.g., accuracy, precision, recall)
+% TODO: Compare kNN results with other methods used in the study
+% TODO: Discuss the impact of different k values on the results
+% TODO: Address any unexpected findings or limitations specific to kNN
+
+\subsubsection{Performance Analysis}
+% TODO: Analyze the performance metrics in detail
+
+\subsubsection{Comparison with Other Methods}
+% TODO: Compare kNN results with other algorithms used in the study
+
+\subsubsection{Parameter Sensitivity}
+% TODO: Discuss how different k values affected the results
 
 % Add more content here as needed
