--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -16,9 +16,9 @@
 % TODO: Add an abstract section before the introduction
 
 \input{01-introduction}
-\input{02-methods}
-\input{03-results}
-\input{04-discussion}
+\input{02-data/02-data}
+\input{03-methods/03-methods}
+\input{04-results-and-analysis/04-results-and-analysis}
 \input{05-conclusion}
 
 % TODO: Add references section
