fix section organization

--- a/work2/reports/04-results-and-analysis/04-results-and-analysis.tex
+++ b/work2/reports/04-results-and-analysis/04-results-and-analysis.tex
@@ -1,4 +1,5 @@
-\subsection{Results and Analysis}
+\section{Results and Analysis}
+\label{sec:results-and-analysis}
 
 \input{04-results-and-analysis/04.1-results}
 \input{04-results-and-analysis/04.2-discussion}
