--- a/work2/reports/04-results-and-analysis/04.1-results.tex
+++ b/work2/reports/04-results-and-analysis/04.1-results.tex
@@ -1,5 +1,5 @@
-\section{Results}
-\label{sec:results}
+\subsection{Results}
+\label{subsec:results}
 
 Here, present the findings of the study. Include relevant data, statistics, and any figures or tables that help illustrate the results.
 
