--- a/work2/reports/04-results-and-analysis/04.2.2-discussion-reduction.tex
+++ b/work2/reports/04-results-and-analysis/04.2.2-discussion-reduction.tex
@@ -1,5 +1,5 @@
-\subsection{Dimensionality Reduction Analysis}
-\label{subsec:discussion-reduction}
+\subsubsection{Dimensionality Reduction Analysis}
+\label{subsubsec:discussion-reduction}
 
 This section interprets the results of the dimensionality reduction techniques, discussing their impact on the analysis and visualization.
 
@@ -7,14 +7,5 @@ This section interprets the results of the dimensionality reduction techniques, 
 % TODO: Compare the results of different reduction techniques
 % TODO: Analyze the impact of dimensionality reduction on classification performance
 % TODO: Address any unexpected findings or limitations of the reduction methods
-
-\subsubsection{Effectiveness of Reduction Techniques}
-% TODO: Evaluate how well each technique preserved important features of the data
-
-\subsubsection{Impact on Classification}
-% TODO: Discuss how dimensionality reduction affected the performance of classification algorithms
-
-\subsubsection{Visualization Insights}
-% TODO: Describe any insights gained from visualizing the reduced-dimensional data
 
 % Add more content here as needed
