--- a/work2/reports/04-results-and-analysis/04.2.3-discussion-svm.tex
+++ b/work2/reports/04-results-and-analysis/04.2.3-discussion-svm.tex
@@ -1,5 +1,5 @@
-\subsection{Support Vector Machines (SVM) Analysis}
-\label{subsec:discussion-svm}
+\subsubsection{Support Vector Machines (SVM) Analysis}
+\label{subsubsec:discussion-svm}
 
 This section interprets the results of the SVM algorithm, discussing its performance and implications.
 
@@ -7,14 +7,5 @@ This section interprets the results of the SVM algorithm, discussing its perform
 % TODO: Compare SVM results with other methods used in the study
 % TODO: Discuss the impact of different kernel functions and hyperparameters
 % TODO: Address any unexpected findings or limitations specific to SVM
-
-\subsubsection{Performance Analysis}
-% TODO: Analyze the performance metrics in detail
-
-\subsubsection{Kernel Function Comparison}
-% TODO: Discuss the performance of different kernel functions, if multiple were used
-
-\subsubsection{Hyperparameter Sensitivity}
-% TODO: Explain how different hyperparameters affected the results
 
 % Add more content here as needed
