--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -1,5 +1,5 @@
-\subsection{k-Nearest Neighbors (kNN) Analysis}
-\label{subsec:discussion-knn}
+\subsubsection{k-Nearest Neighbors (kNN) Analysis}
+\label{subsubsec:discussion-knn}
 
 This section interprets the results of the kNN algorithm, discussing its performance and implications.
 
@@ -7,14 +7,5 @@ This section interprets the results of the kNN algorithm, discussing its perform
 % TODO: Compare kNN results with other methods used in the study
 % TODO: Discuss the impact of different k values on the results
 % TODO: Address any unexpected findings or limitations specific to kNN
-
-\subsubsection{Performance Analysis}
-% TODO: Analyze the performance metrics in detail
-
-\subsubsection{Comparison with Other Methods}
-% TODO: Compare kNN results with other algorithms used in the study
-
-\subsubsection{Parameter Sensitivity}
-% TODO: Discuss how different k values affected the results
 
 % Add more content here as needed
