--- a/work2/reports/01-introduction.tex
+++ b/work2/reports/01-introduction.tex
@@ -11,23 +11,24 @@ For example: given a set of emails, classify each email as spam or not spam.
 It is a supervised learning technique that is used to assign labels to data points based on their characteristics.
 Classification is an ideal technique for the required analysis as outlined in this report.\par
 
-K-Nearest Neighbour (k-NN) is a supervised machine learning algorithm.
-It is a relatively simple algorithm that stores all available cases and classifies new cases based on a similarity metric.
-The k-NN algorithm is based on feature similarity: how closely the new data point resembles points in the training set.
-K-NN may be used for both classification and regression problems, but as outlined above, our focus is on classification due to the nature of the datasets used.\par
-
-% POTENTIALLY MOVE THIS PARAGRAPH TO K-NN DISCUSSON!!
-One key feature of k-NN is neighbor-based classification. 
-This means that the classification of a new data point is determined by the majority class among its k-nearest neighbors in the training set. 
-The value of k is a crucial hyperparameter that can significantly affect the performance of the algorithm.
-A small value of k makes the algorithm sensitive to noise, while a large value of k makes it computationally expensive and may lead to over-smoothing.
+K-Nearest Neighbour (k-NN) is a supervised machine learning algorithm that has been chosen as the primary method for this study.
+It is a simple yet powerful algorithm that classifies new cases based on similarity to existing data points.
+While k-NN can be used for both classification and regression problems, our focus is on classification due to the nature of the datasets used.\par
 
 This report details the analysis of two datasets: `hepatitis' and `mushroom'. These are two of many datasets provided to us as part of this assignment.
 We decided upon these two datasets due to the stark contrast between them in terms of complexity and size.
 
 \subsection{Research Question or Hypothesis}
 The primary research question addressed in this report is: `Can the k-Nearest Neighbour algorithm effectively classify
-data points in the hepatitis and mushroom datasets with high accuracy'?.
+data points in the hepatitis and mushroom datasets with high accuracy'?.\par
+
+The specific objectives of this study are:
+\begin{enumerate}
+    \item To evaluate k-NN's classification performance on datasets of varying sizes and complexities
+    \item To determine optimal k-NN hyperparameter settings for each dataset
+    \item To assess the algorithm's robustness and limitations in different scenarios
+\end{enumerate}
+
 We hypothesize that k-NN will perform excellently on the mushroom dataset due to the simplicity of the data,
 but may struggle with the hepatitis dataset due to the complexity of the data in that dataset.
 
@@ -43,9 +44,9 @@ The approach taken in this report involves the following steps:
 \subsection{Report Structure}
 The report is structured as follows:
 \begin{enumerate}
-    \item Introduction: Provides background information, states the research question, and outlines the approach.
-    \item Data: Describes the data used in the study, along with the source, characteristics, relevance, and the preprocessing techniques that were applied.
-    \item Methods: Describes the methodology used in the study, including the algorithms, techniques, and tools used.
-    \item Results and Analysis: Findings of the study are presented, including relevant data, statistics, and figures to help visualise the data.
-    \item Conclusion: Summarizes main findings of the study and their significance.
+    \item Introduction (Section 1): Provides background information, states the research question, and outlines the approach.
+    \item Data (Section 2): Describes the data used in the study, along with the source, characteristics, relevance, and the preprocessing techniques that were applied.
+    \item Methods (Section 3): Describes the methodology used in the study, including the algorithms, techniques, and tools used.
+    \item Results and Analysis (Section 4): Findings of the study are presented, including relevant data, statistics, and figures to help visualise the data.
+    \item Conclusion (Section 5): Summarizes main findings of the study and their significance.
 \end{enumerate}
