--- a/work2/reports/03-methods/03.1-methods-knn.tex
+++ b/work2/reports/03-methods/03.1-methods-knn.tex
@@ -90,19 +90,65 @@ In uniform weighting, all neighbours have equal weight in the voting process.
 This is the default weighting scheme in k-NN.
 An advantage of uniform weighting is that it is simple and computationally efficient, but it may not be optimal for imbalanced datasets.\\
 
-
 With ReliefF weighting, neighbours are weighted based on their relevance to the target class.
 This provides a more nuanced approach to weighting as it considers the importance of each neighbour in the classification process, potentially
 improving performance of the algorithm.\\
 
 Information gain weighting, Neighbours are weighted based on gain in information in the context of the target variable [3].
+Similarly to ReliefF weighting, this weighting scheme assigns higher weights to neighbours that provide more information about the target class.\\
+
+\subsubsection*{Voting Schemes}
+In the k-NN algorithm, the voting scheme determines how the class label of a new data point is determined based on the class labels of its k-nearest neighbors.
+The following voting schemes were implemented in this study:\\
+
+In the majority voting scheme, the class label with the highest frequency among the k-nearest neighbors is assigned to the new data point.
+As well as this, each vote is given equal weight in the voting process [4].
+This is the default voting scheme in k-NN and is simple and easy to implement.\\
+
+With inverse distance weighting voting, the class labels of the k-nearest neighbors are weighted based on their distance from the new data point.
+While there are different methods to perform this weighting, the most simple version is to take a neighbour's vote to be the inverse
+of its distance to q:
+
+\[ w_i = \frac{1}{d(q, x_i)} \]
+
+where \(w_i\) is the weight of the \(i\)th neighbour, \(d(q, x_i)\) is the distance between the new data point \(q\) and the \(i\)th neighbour \(x_i\).
+
+Then the votes are summed and the class with the highest votes is returned [4].\\
+
+Shepard's method is another voting scheme that can be used in k-NN algorithms. 
+It employs the use of an exponential function to weight the votes of the neighbours based on their distance from the new data point,
+rather than the inverse of the distance [5].
+
+The formula for Shepard's voting scheme is:
+\begin{equation} 
+    Vote(y_j)=\sum_{i=1}^k e^{-d(\mathbf{q,x}_i)^2}1(y_j,y_c)
+\end{equation}
+
+where \(Vote(y_j)\) is the vote for class \(y_j\), \(d(\mathbf{q,x}_i)\) is the
+distance between the new data point \(\mathbf{q}\) and the \(i\)th neighbour \(\mathbf{x}_i\),
+and \(1(y_j,y_c)\) is the indicator function that returns 1 if \(y_j\) is the same as
+the class label \(y_c\) of the \(i\)th neighbour, and 0 otherwise.\\
+
+\subsubsection*{Neighbor Selection}
+The choice of the number of neighbors (k) is a critical hyperparameter in the k-NN algorithm, as previously discussed in this report.
+In this study, the following values of k where examined:
+
+[1, 3, 5, 7]
+
+% FINISH THIS SECTION
 
 % Implementation Details:
 % - Neighbor selection
-% - Weighting schemes
-% - Voting schemes
 % - Basic algorithm steps
-% - Libraries and tools used
+
+
+The following libraries and tools were used for the implementation of our study:
+- Python: The primary programming language used for the implementation of the k-NN algorithm.
+- NumPy: A useful package for scientific computing with Python, used for numerical operations.
+- Scikit-learn: A machine learning library in Python, used for implementing the k-NN algorithm.
+- Pandas: A data manipulation library in Python, used for data preprocessing and analysis.
+- Matplotlib: A plotting library in Python, used for data visualization.
+- CHECK FOR MORE
 
 
 \subsubsection{Parameter Tuning}
@@ -115,4 +161,6 @@ Information gain weighting, Neighbours are weighted based on gain in information
 % [1] LaViale, T. (2023). Deep Dive on KNN: Understanding and Implementing the K-Nearest Neighbors Algorithm. [online] Arize AI. Available at: https://arize.com/blog-course/knn-algorithm-k-nearest-neighbor/.
 % [2] IBM (2023). What Is the k-nearest Neighbors algorithm? | IBM. [online] www.ibm.com. Available at: https://www.ibm.com/topics/knn.
 % [3] Brownlee, J. (2019). Information Gain and Mutual Information for Machine Learning. [online] Machine Learning Mastery. Available at: https://machinelearningmastery.com/information-gain-and-mutual-information/.
-
+% [4] Classification: k Nearest Neighbours. (n.d.). Available at: https://www.cs.ucc.ie/~dgb/courses/tai/notes/handout4.pdf [Accessed 26 Oct. 2024].
+% [5] Padraig Cunningham, Sarah Jane Delany, k-Nearest Neighbour Classifiers - A Tutorial. ACM Comput. Surv. 54(6): 128:1-128:25 (2021), DOI: 10.1145/3459665
+‌
