add option for generating latex tables from pandas and referencing it directly

--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[margin=1in]{geometry}
+\usepackage{booktabs}
+\usepackage{array}
 
 % TODO: Add any additional packages needed for the report
 % TODO: Consider adding a table of contents with \tableofcontents
